test/zinc_source/compile_errors/enums/01_unknown_variant.zn
// expected-error: enum 'Message' has no variant 'Missing'
enum Message {
    Quit
}

fn main() {
    msg = Message.Missing
    print("{msg}")
}
